[package]
name = "sqrlback"
version = "0.1.0"
authors = ["Jason Clark <jason@jjasonclark.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "^0.10", features = ["json"] }
env_logger = "^0.7"
juniper = "0.14.2"
juniper_warp = "0.5.2"
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
warp = "^0.1"
tokio = { version = "^0.2", features = ["full"] }
