[package]
name = "sqrlback"
version = "0.1.0"
authors = ["Jason Clark <jason@jjasonclark.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = { version = "^0.10", features = ["json"] }
env_logger = "^0.7"
juniper = "^0.14"
juniper_warp = "^0.5"
log = "^0.4"
rustache = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
warp = "^0.1"
tokio = { version = "^0.2", features = ["full"] }
